--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "data-mincer",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "description": "modular data parser library for JS and TS applications",
     "main": "lib/index.js",
     "types": "lib/index.d.ts",
@@ -29,5 +29,7 @@
         "ts-node-dev": "^1.1.8",
         "typescript": "^4.4.2"
     },
-    "files": ["lib/"]
+    "files": [
+        "lib/"
+    ]
 }
